# dfmm

./: .gitignore  HANDOFF.md  Makefile  Manifest.toml  Project.toml  README.md  pyproject.toml
data/: noise_model_params.npz
design/: 03_action_note_v2.tex
dfmm/: __init__.py  config.py  integrate.py  tracers.py
experiments/: 01_sod_validation.py  02_sine_shell_crossing.py  03_steady_shock.py  04_shock_thickness_scans.py  05_two_fluid_dust_gas.py  06_maxent_kappa.py  07_eion_equilibration.py  10_kmles_wavepool.py  11_kmles_calibrate.py  12_kmles_correlation_scan.py  13_kmles_energy_conservation.py  14_kmles_ensemble.py  15_seam_tracer.py  A1_sod.jl  A1_sod_with_q.jl  A2_cold_sinusoid.jl  A3_steady_shock.jl  B1_energy_drift.jl  B3_action_amr.jl  B4_compression_bursts.jl  B5_passive_tracer.jl  B6_multitracer_wavepool.jl  C1_2d_sod_1d_symmetric.jl  C1_3d_sod.jl  C2_2d_cold_sinusoid.jl  C2_3d_cold_sinusoid.jl  C3_2d_plane_wave.jl  C3_2d_plane_wave_convergence.jl  C3_3d_plane_wave.jl  D10_ism_multi_tracer.jl  D1_3D_KH_growth_rate.jl  D1_KH_growth_rate.jl  D4_zeldovich_3d.jl  D4_zeldovich_pancake.jl  D7_dust_traps.jl  E1_high_mach_shock.jl  E2_severe_shell_crossing.jl  E3_low_knudsen.jl  M2_3_long_time_stochastic.jl  M3_3d_per_axis_gamma_cold_sinusoid.jl  (+2 more)
momentlag/: __init__.py  diagnostics.py  integrate.py
paper/: paper.tex
py-1d/: .gitignore  README.md
reference/: MILESTONE_1_PLAN.md  MILESTONE_1_STATUS.md  MILESTONE_2_STATUS.md  MILESTONE_3_FINAL.md  MILESTONE_3_PLAN.md  MILESTONE_3_PLAN_legacy_pre_HG.md  MILESTONE_3_STATUS.md  MILESTONE_4_FINAL.md  (+73 more)
src/: eom.jl  (+30 more)
(+200 files in other folders)
