[project]
name = "dfmm"
version = "0.1.0"
description = "A Lagrangian-coordinate-aware moment scheme with built-in closure diagnostics"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Tom Abel" }]
dependencies = [
    "numpy>=1.24",
    "numba>=0.57",
    "scipy>=1.10",
    "matplotlib>=3.6",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "hypothesis>=6.0"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["dfmm*"]
